--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Web</title>
+    <title>Cloud Storage</title>
+    <link rel="stylesheet" href="assents/css/estilos.css">
+    <style>
+        body {
+            background-image: url(assents/img/fondo.jpg);
+            background-repeat: no-repeat;
+            background-size: cover ;
+            background-attachment: fixed;
+        }
+    </style>
 </head>
-<body>
-    <h1>Estamos probando git</h1><br>
+<body style="background-color: rgb(50, 94, 241); color:rgb(255, 255, 255);">
+    <div>
+        <img id="logo" src="assents/img/Logo.png" alt="Logo-Could-Storage" height="120vh">
+    </div>
+    <div>
+        <section id="formulario">
+            <h1>Sing In</h1>
+            <input type="text" placeholder="Name">
+            <input type="password" placeholder=" password">
+            <input type="button" value="Sing in">
+        </section>
+    </div>
 </body>
 </html>
