--- a/Restaurantes.html
+++ b/Restaurantes.html
@@ -49,6 +49,6 @@
             rest12
         </div>
     </div>
-    <input onclick="location.href='nuevaEmpresa.html'" id="boton-rest" type="button" value="Agregar">
+    <input onclick="location.href='nuevaEmpresa.html'" id="boton-rest" type="button" value="Agregar Nuevo Restaurante">
 </body>
 </html>
