Actualizacion previo a entrega

--- a/Restaurantes.html
+++ b/Restaurantes.html
@@ -3,52 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurantes</title>
+    <title>RestBoss</title>
     <link rel="stylesheet" href="assents/css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
     <div id="head-logo">
         <img id="logo" src="assents/img/Fondo-icono.jpeg" alt="Logo">
     </div>
     <input id="buscar-motorista" type="text" placeholder="Buscar Restaurantes">
-    <div id="container-rest">
-        <div id="box">
-            rest1
-        </div>
-        <div id="box">
-            rest2
-        </div>
-        <div id="box">
-            rest3
-        </div>
-        <div id="box">
-            rest4
-        </div>
-        <div id="box">
-            rest5
-        </div>
-        <div id="box">
-            rest6
-        </div>
-        <div id="box">
-            rest7
-        </div>
-        <div id="box">
-            rest8
-        </div>
-        <div id="box">
-            rest9
-        </div>
-        <div id="box">
-            rest10
-        </div>
-        <div id="box">
-            rest11
-        </div>
-        <div id="box">
-            rest12
+    
+    <div class="container-fluid">
+        <div class="row" id="restaurantes">
+            
         </div>
     </div>
     <input onclick="location.href='nuevaEmpresa.html'" id="boton-rest" type="button" value="Agregar Nuevo Restaurante">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="assents/js/controlador.js"></script>
 </body>
 </html>
