--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TurboDelivery</title>
     <link rel="stylesheet" href="assents/css/styles.css">
+    <link rel="stylesheet" href="assents/js/controlador.js">
 </head>
 <body>
     <div id="head-logo">
