--- a/nuevaEmpresa.html
+++ b/nuevaEmpresa.html
@@ -11,8 +11,9 @@
         <img id="logo" src="assents/img/Fondo-icono.jpeg" alt="Logo">
     </div>
     <h2>Agregar Nueva Empresa</h2>
-    <input id="in-empresa" type="text" placeholder="Nombre">
+    <input id="in-empresa" type="text" placeholder="Nombre Restaurante">
     <input id="in-empresa" type="text" placeholder="Categoria">
-    <input id="in-empresa" type="text" placeholder="horario">
+    <input id="in-empresa" type="text" placeholder="Horarios de atencion">
+    <input id="in-empresa" type="text" placeholder="Agregar Nuevo restaurante">
 </body>
 </html>
