Actualizacion previo a entrega

--- a/nuevaEmpresa.html
+++ b/nuevaEmpresa.html
@@ -14,6 +14,6 @@
     <input id="in-empresa" type="text" placeholder="Nombre Restaurante">
     <input id="in-empresa" type="text" placeholder="Categoria">
     <input id="in-empresa" type="text" placeholder="Horarios de atencion">
-    <input id="in-empresa" type="text" placeholder="Agregar Nuevo restaurante">
+    <input id="boton-rest" type="text" placeholder="Agregar Nuevo restaurante">
 </body>
 </html>
