Actualizacion 2 previo a entrega

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <input id="user" type="text" placeholder="Usuario">
                 <input id="passw" type="password" placeholder="Contraseña">
                 <input onclick="location.href='menu.html'" id="boton-login" type="button" value="Iniciar Sesion">
+                <button onclick="guardar()" id="boton-login">Iniciar Sesion</button>
             </section>
         </div>
     </div>
